# DisAggSruct

./: .gitignore  Doxyfile  LICENSE  README.md
DisAggStruct/: CMakeLists.txt  DisAggStruct.sln  README.md
DisAggStruct/.claude/: settings.local.json
DisAggStruct/DisAggStruct/: DisAggStruct.vcxproj  DisAggStruct.vcxproj.filters  Main.cpp
DisAggStruct/DisAggStruct/Core/: DisAggStruct.h  Morpheme.h
DisAggStruct/DisAggStruct/Examples/: DomainExamples.cpp  DomainExamples.h
DisAggStruct/DisAggStruct/Finance/: FinanceBackEnd.cpp  FinanceBackEnd.h  FinanceFrontEnd.h  FinanceTypes.h
DisAggStruct/DisAggStruct/Sensor/: SensorBackEnd.cpp  SensorBackEnd.h  SensorFrontEnd.h  SensorTypes.h  SensorUseCases.cpp  SensorUseCases.h
DisAggStruct/DisAggStruct/Tests/: Tests.cpp  Tests.h
DisAggStruct/DisAggStruct/Weather/: WeatherBackEnd.cpp  WeatherBackEnd.h  WeatherFrontEnd.h  WeatherTypes.h
docs/html/: _dis_agg_struct_8h.html  _dis_agg_struct_8h.js  _dis_agg_struct_8h_source.html  _domain_examples_8cpp.html  _domain_examples_8cpp.js  _domain_examples_8h.html  _domain_examples_8h.js  _domain_examples_8h_source.html  _finance_back_end_8cpp.html  _finance_back_end_8cpp.js  _finance_back_end_8h.html  _finance_back_end_8h.js  _finance_back_end_8h_source.html  _finance_front_end_8h.html  _finance_front_end_8h.js  _finance_front_end_8h_source.html  _finance_types_8h.html  _finance_types_8h.js  _finance_types_8h_source.html  _main_8cpp.html  _morpheme_8h.html  _morpheme_8h.js  _morpheme_8h_source.html  _sensor_back_end_8cpp.html  _sensor_back_end_8cpp.js  _sensor_back_end_8h.html  _sensor_back_end_8h.js  _sensor_front_end_8h.html  (+115 more)
(+54 files in other folders)
